--- a/TrelloContextMenu/TrelloContextMenu.csproj
+++ b/TrelloContextMenu/TrelloContextMenu.csproj
@@ -52,6 +52,7 @@
       <HintPath>..\packages\SharpShell.1.9.0\lib\SharpShell.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
@@ -68,10 +69,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TinyIoC.cs" />
     <Compile Include="UntestableContextMenu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="Fody.targets" />
     <None Include="packages.config" />
   </ItemGroup>
