--- a/TrelloContextMenu.Tests/TrelloContextMenu.Tests.csproj
+++ b/TrelloContextMenu.Tests/TrelloContextMenu.Tests.csproj
@@ -59,7 +59,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MenuTests.cs" />
+    <Compile Include="AddAsCardContextMenuTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
