--- a/TrelloContextMenu/TrelloContextMenu.csproj
+++ b/TrelloContextMenu/TrelloContextMenu.csproj
@@ -69,8 +69,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UntestableContextMenu.cs" />
+    <Compile Include="IEnumerableExtensions.cs" />
+    <Compile Include="ITestableContextMenu.cs" />
+    <Compile Include="TestableContextMenu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UntestableContextMenu.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="app.config">
